--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,5 +1,10 @@
 {
-  "extends": "airbnb-base",
+  "plugins": ["meteor"],
+  "extends": [
+    "airbnb-base",
+    "eslint:recommended",
+    "plugin:meteor/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
