--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-meteor": "^7.0.0"
   }
 }
