--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-import": "^2.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2"
   },
