--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .js ."
+    "lint": "eslint --ext .js .",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.20.0"
   },
   "devDependencies": {
-    "eslint-plugin-meteor": "^7.0.0"
+    "eslint-plugin-meteor": "^7.0.0",
+    "nodemon": "^2.0.4"
   }
 }
