--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.18",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.0"
+    "eslint-plugin-import": "^2.20.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.5.0",
+    "mongoose": "^5.9.18",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint-plugin-meteor": "^7.0.0",
