--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-cookie-consent": "^5.1.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2"
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-redux": "^7.2.0"
   }
 }
