--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.18",
